[+] Current code:
    - CMakeLists file performed (thanks antoniojars!!)
    - Solved problems with some launchers (with %U, %c...) and added support for
      elastic cursor on launch and similar effects.
    - By default, uses the distro specified icon
    - Added support for remember last tab or not
    - Added a tooltip to show the complete name of the launchers that , for
      space reason, can't show their complete name


[+] Takeoff v0.1.5 (2011/08/01)
    - Switched from QMake to CMake to solve the "Could not find requested
      component:takeoff" problem in certain distros. Special thanks to
      "pinotree" for his help with cmake.
    - Removed the libmagic dependence

[+] Takeoff v0.1 (2011/07/29)
    - Initial release