@@ -1,3 +1,3 @@
 FILE(GLOB_RECURSE PO_FILES *.po)
 
-add_translations(takeoff ${PO_FILES})
+add_translations(plasma_applet_takeoff ${PO_FILES})
